# gestiApp

./: README.md  index.html  index_clientes.html  index_logistica.html  index_metodoPagos.html  index_pedidos.html  index_productos.html  index_ventas.html  organizacion.txt  package-lock.json
admin-dashboard/: package-lock.json  package.json
admin-dashboard/src/: App.jsx
admin-dashboard/src/components/: Sidebar.jsx
admin-dashboard/src/components/clients/: AddClientForm.jsx  ClientActivityHeatmap.jsx  ClientDemographicsChart.jsx  ClientGrowthChart.jsx  ClientsTable.jsx  EditClientForm.jsx
admin-dashboard/src/components/common/: Header.jsx  Sidebar.jsx  StatCard.jsx
admin-dashboard/src/components/orders/: OrdersTable.jsx
admin-dashboard/src/components/overview/: CategoryDistributionChart.jsx  PaymentMethodChart.jsx  SalesChannelChart.jsx  SalesOverviewChart.jsx
admin-dashboard/src/components/products/: EditProductForm.jsx  ProductsTable.jsx  SalesTrendChart.jsx
admin-dashboard/src/components/sales/: AddSaleForm.jsx  SalesOverviewChart.jsx  SalesTable.jsx
admin-dashboard/src/pages/: ClientsPage.jsx  OrdersPage.jsx  OverviewPage.jsx  ProductsPage.jsx  SalesPage.jsx
app/: CMakeLists.txt
app/include/controllers/: CalculusController.h  ClientesController.h  LogisticaController.h  MetodoPagosController.h  PedidosController.h  ProductosController.h  VentasController.h
app/include/database/: DatabaseConnection.h
app/include/models/: Clientes.h  Logistica.h  MetodoPagos.h  Pedidos.h  Productos.h  Ventas.h
app/include/services/: CalculusService.h  ClientesService.h  LogisticaService.h  MetodoPagosService.h  PedidosService.h  ProductosService.h  VentasService.h
app/src/: TodoController.hpp  TodoService.hpp  main.cpp
app/src/controllers/: CalculusController.cpp  ClientesController.cpp  LogisticaController.cpp  MetodoPagosController.cpp  PedidosController.cpp  ProductosController.cpp  VentasController.cpp
app/src/database/: DatabaseConnection.cpp  DatabaseConnection.h
app/src/models/: Clientes.cpp  Logistica.cpp  MetodoPagos.cpp  Pedidos.cpp  Productos.cpp  Ventas.cpp
app/src/routes/: Routes.cpp  Routes.h
app/src/services/: CalculusService.cpp  ClientesService.cpp  LogisticaService.cpp  MetodoPagosService.cpp  PedidosService.cpp  ProductosService.cpp  VentasService.cpp
gesti_db/: create_gesti_db_relationships  create_gesti_db_tables  gesti_db_ERD_diagram  gesti_db_credential.txt
testPistache/: CMakeLists.txt
testPistache/src/: AppComponent.hpp  Todo.hpp
